--- a/index.html
+++ b/index.html
@@ -1,61 +1,90 @@
 <!doctype html>
-  <html>
+<html>
+
+<head>
+  <script src="https://aframe.io/releases/1.4.2/aframe.min.js">
+
+  </script>
+  <script src="https://raw.githack.com/AR-js-org/AR.js/3.4.5/aframe/build/aframe-ar.js">
+
+  </script>
+  <script src="shader-glitch.js"></script>
+</head>
+
+
+<body style="margin : 0px; overflow: hidden;">
+
+  <a-scene embedded
+    arjs="sourceType: webcam; detectionMode: mono_and_matrix; matrixCodeType: 3x3; trackingMethod: best ; changeMatrixMode: modelViewMatrix;"
+    vr-mode-ui="enabled: false" renderer="sortObjects: true; antialias: true;" smooth=" true" smoothCount="5"
+    smoothTolerance=".05" smoothThreshold="5" sourceWidth="800" sourceHeight="600" displayWidth="1920"
+    displayHeight="1090">
+
+
+
+    <a-marker type="barcode" value="38">
+
+      <a-plane material="shader:grid-glitch; color: blue; resX:3 ; resY:3; transparent:true; offset:1.4" depth="1"
+        height="1" width="1" rotation="270 0 0" "></a-plane>
   
-  <head>
-    <script src="https://aframe.io/releases/1.4.2/aframe.min.js">
-  
-    </script>
-    <script src="https://raw.githack.com/AR-js-org/AR.js/3.4.5/aframe/build/aframe-ar.js">
-  
-    </script>
-    <script src="shader-glitch.js"></script>
-  </head>
-  
-  
-  <body style="margin : 0px; overflow: hidden;">
-  
-    <a-scene embedded
-      arjs="sourceType: webcam; detectionMode: mono_and_matrix; matrixCodeType: 3x3; trackingMethod: best ; changeMatrixMode: modelViewMatrix;"
-      vr-mode-ui="enabled: false" renderer="sortObjects: true; antialias: true;" smooth=" true" smoothCount="5"
-      smoothTolerance=".05" smoothThreshold="5" sourceWidth="800" sourceHeight="600" displayWidth="1920"
-      displayHeight="1090">
-  
-  
-  
-      <a-marker type="barcode" value="38">
-  
-        <a-plane material="shader:grid-glitch; color: blue; resX:3 ; resY:3; transparent:true; offset:1.4" depth="1"
-          height="1" width="1" rotation="270 0 0" "></a-plane>
-  
-        <a-plane material=" shader:grid-glitch; color: blue; resX:3 ; resY:3; transparent:true; offset:1.3" depth="1"
-          height="1" width="1" rotation="270 0 0" position="0 .33 0"></a-plane>
-  
-        <a-plane material=" shader:grid-glitch; color: blue; resX:3 ; resY:3; transparent:true; offset:1.2" depth="1"
-          height="1" width="1" rotation="270 0 0" position="0 .66 0"></a-plane>
-  
-        <a-plane material=" shader:grid-glitch; color: blue; resX:3 ; resY:3; transparent:true; offset:1.1" depth="1"
-          height="1" width="1" rotation="270 0 0" position="0 1. 0"></a-plane>
-  
-        <a-plane material=" shader:grid-glitch; color: blue; resX:3 ; resY:3; transparent:true; offset:0." depth="1"
-          height="1" width="1" rotation="270 0 0" position="0 1.33 0"></a-plane>
-  
-        <a-plane material=" shader:grid-glitch; color: blue; resX:3 ; resY:3; transparent:true; offset:-1." depth="1"
-          height="1" width="1" rotation="270 0 0" position="0 1.66 0"></a-plane>
-  
-  
-  
-  
-  
-  
-      </a-marker>
-  
-  
-  
-      <a-camera position=" 0 0 0" look-controls="enabled: false">
-      </a-camera>
-  
-    </a-scene>
-  
-  </body>
-  
-  </html>
+        <a-plane material=" shader:grid-glitch; transparent:true; offset:0.13" depth="1" height="1" width="1"
+        rotation="270 0 0" position="0 .1 0"></a-plane>
+
+      <a-plane material=" shader:grid-glitch;  transparent:true; offset:0.12" depth="1" height="1" width="1"
+        rotation="270 0 0" position="0 .2 0"></a-plane>
+
+      <a-plane material=" shader:grid-glitch;  transparent:true; offset:0.11" depth="1" height="1" width="1"
+        rotation="270 0 0" position="0 .3 0"></a-plane>
+
+      <a-plane material=" shader:grid-glitch;  transparent:true; offset:0.0" depth="1" height="1" width="1"
+        rotation="270 0 0" position="0 .4 0"></a-plane>
+
+      <a-plane material=" shader:grid-glitch;  transparent:true; offset:-0.1" depth="1" height="1" width="1"
+        rotation="270 0 0" position="0 .5 0"></a-plane>
+
+      <a-plane material=" shader:grid-glitch;  transparent:true; offset:-0.2" depth="1" height="1" width="1"
+        rotation="270 0 0" position="0 .6 0"></a-plane>
+
+      <a-plane material=" shader:grid-glitch;  transparent:true; offset:-0.3" depth="1" height="1" width="1"
+        rotation="270 0 0" position="0 .7 0"></a-plane>
+
+      <a-plane material=" shader:grid-glitch;  transparent:true; offset:-0.4" depth="1" height="1" width="1"
+        rotation="270 0 0" position="0 .8 0"></a-plane>
+
+      <a-plane material=" shader:grid-glitch;  transparent:true; offset:-0.5" depth="1" height="1" width="1"
+        rotation="270 0 0" position="0 .9 0"></a-plane>
+
+      <a-plane material=" shader:grid-glitch;  transparent:true; offset:-0.6" depth="1" height="1" width="1"
+        rotation="270 0 0" position="0 1.0 0"></a-plane>
+
+      <a-plane material=" shader:grid-glitch;  transparent:true; offset:-0.7" depth="1" height="1" width="1"
+        rotation="270 0 0" position="0 1.1 0"></a-plane>
+
+      <a-plane material=" shader:grid-glitch;  transparent:true; offset:-0.8" depth="1" height="1" width="1"
+        rotation="270 0 0" position="0 1.2 0"></a-plane>
+
+      <a-plane material=" shader:grid-glitch;  transparent:true; offset:-0.9" depth="1" height="1" width="1"
+        rotation="270 0 0" position="0 1.3 0"></a-plane>
+
+      <a-plane material=" shader:grid-glitch;  transparent:true; offset:-1.0" depth="1" height="1" width="1"
+        rotation="270 0 0" position="0 1.4 0"></a-plane>
+
+      <a-plane material=" shader:grid-glitch;  transparent:true; offset:-1.1" depth="1" height="1" width="1"
+        rotation="270 0 0" position="0 1.5 0"></a-plane>
+
+
+
+
+
+    </a-marker>
+
+
+
+    <a-camera position=" 0 0 0" look-controls="enabled: false">
+    </a-camera>
+
+  </a-scene>
+
+</body>
+
+</html>
