switch to ids instead of offsets

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!doctype html>
 <html>
 
-<!-- https://replit.com/@b2renger/Irreverent#index.html -->
 <head>
   <script src="https://aframe.io/releases/1.4.2/aframe.min.js">
 
@@ -25,52 +24,51 @@
 
     <a-marker type="barcode" value="38">
 
-      <a-plane material="shader:grid-glitch; color: blue; resX:3 ; resY:3; transparent:true; offset:1.4" depth="1"
-        height="1" width="1" rotation="270 0 0" "></a-plane>
+      <a-plane material="shader:grid-glitch; transparent:true; id:1" depth="1" height="1" width="1" rotation="270 0 0" "></a-plane>
   
-        <a-plane material=" shader:grid-glitch; transparent:true; offset:0.13" depth="1" height="1" width="1"
+        <a-plane material=" shader:grid-glitch; transparent:true; id:1" depth="1" height="1" width="1"
         rotation="270 0 0" position="0 .1 0"></a-plane>
 
-      <a-plane material=" shader:grid-glitch;  transparent:true; offset:0.12" depth="1" height="1" width="1"
-        rotation="270 0 0" position="0 .2 0"></a-plane>
+      <a-plane material=" shader:grid-glitch;  transparent:true; id:2" depth="1" height="1" width="1" rotation="270 0 0"
+        position="0 .2 0"></a-plane>
 
-      <a-plane material=" shader:grid-glitch;  transparent:true; offset:0.11" depth="1" height="1" width="1"
-        rotation="270 0 0" position="0 .3 0"></a-plane>
+      <a-plane material=" shader:grid-glitch;  transparent:true; id:3" depth="1" height="1" width="1" rotation="270 0 0"
+        position="0 .3 0"></a-plane>
 
-      <a-plane material=" shader:grid-glitch;  transparent:true; offset:0.0" depth="1" height="1" width="1"
-        rotation="270 0 0" position="0 .4 0"></a-plane>
+      <a-plane material=" shader:grid-glitch;  transparent:true; id:4" depth="1" height="1" width="1" rotation="270 0 0"
+        position="0 .4 0"></a-plane>
 
-      <a-plane material=" shader:grid-glitch;  transparent:true; offset:-0.1" depth="1" height="1" width="1"
-        rotation="270 0 0" position="0 .5 0"></a-plane>
+      <a-plane material=" shader:grid-glitch;  transparent:true; id:5" depth="1" height="1" width="1" rotation="270 0 0"
+        position="0 .5 0"></a-plane>
 
-      <a-plane material=" shader:grid-glitch;  transparent:true; offset:-0.2" depth="1" height="1" width="1"
-        rotation="270 0 0" position="0 .6 0"></a-plane>
+      <a-plane material=" shader:grid-glitch;  transparent:true; id:6" depth="1" height="1" width="1" rotation="270 0 0"
+        position="0 .6 0"></a-plane>
 
-      <a-plane material=" shader:grid-glitch;  transparent:true; offset:-0.3" depth="1" height="1" width="1"
-        rotation="270 0 0" position="0 .7 0"></a-plane>
+      <a-plane material=" shader:grid-glitch;  transparent:true; id:7" depth="1" height="1" width="1" rotation="270 0 0"
+        position="0 .7 0"></a-plane>
 
-      <a-plane material=" shader:grid-glitch;  transparent:true; offset:-0.4" depth="1" height="1" width="1"
-        rotation="270 0 0" position="0 .8 0"></a-plane>
+      <a-plane material=" shader:grid-glitch;  transparent:true; id:8" depth="1" height="1" width="1" rotation="270 0 0"
+        position="0 .8 0"></a-plane>
 
-      <a-plane material=" shader:grid-glitch;  transparent:true; offset:-0.5" depth="1" height="1" width="1"
-        rotation="270 0 0" position="0 .9 0"></a-plane>
+      <a-plane material=" shader:grid-glitch;  transparent:true; id:9" depth="1" height="1" width="1" rotation="270 0 0"
+        position="0 .9 0"></a-plane>
 
-      <a-plane material=" shader:grid-glitch;  transparent:true; offset:-0.6" depth="1" height="1" width="1"
+      <a-plane material=" shader:grid-glitch;  transparent:true; id:10" depth="1" height="1" width="1"
         rotation="270 0 0" position="0 1.0 0"></a-plane>
 
-      <a-plane material=" shader:grid-glitch;  transparent:true; offset:-0.7" depth="1" height="1" width="1"
+      <a-plane material=" shader:grid-glitch;  transparent:true; id:11" depth="1" height="1" width="1"
         rotation="270 0 0" position="0 1.1 0"></a-plane>
 
-      <a-plane material=" shader:grid-glitch;  transparent:true; offset:-0.8" depth="1" height="1" width="1"
+      <a-plane material=" shader:grid-glitch;  transparent:true; id:12" depth="1" height="1" width="1"
         rotation="270 0 0" position="0 1.2 0"></a-plane>
 
-      <a-plane material=" shader:grid-glitch;  transparent:true; offset:-0.9" depth="1" height="1" width="1"
+      <a-plane material=" shader:grid-glitch;  transparent:true; id:13 depth=" 1" height="1" width="1"
         rotation="270 0 0" position="0 1.3 0"></a-plane>
 
-      <a-plane material=" shader:grid-glitch;  transparent:true; offset:-1.0" depth="1" height="1" width="1"
+      <a-plane material=" shader:grid-glitch;  transparent:true; id:14" depth="1" height="1" width="1"
         rotation="270 0 0" position="0 1.4 0"></a-plane>
 
-      <a-plane material=" shader:grid-glitch;  transparent:true; offset:-1.1" depth="1" height="1" width="1"
+      <a-plane material=" shader:grid-glitch;  transparent:true; id:15" depth="1" height="1" width="1"
         rotation="270 0 0" position="0 1.5 0"></a-plane>
 
 
